--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+.content{
+    display: none;
+
+}
+.content.actives{
+    display: block;
+
+}
